--- a/index.html
+++ b/index.html
@@ -18,11 +18,19 @@
   </head>
   <body>
     <header><h1>Mukesh's Todo List</h1></header>
+
     <form>
       <input type="text" class="todo-input" />
       <button class="todo-button" type="submit">
         <i class="fas fa-plus-square"></i>
       </button>
+      <div class="select">
+        <select name="todos" class="todo-filter">
+          <option value="all">All</option>
+          <option value="completed">Completed</option>
+          <option value="pending">Pending</option>
+        </select>
+      </div>
     </form>
     <div class="todo-container">
       <ul class="todo-list"></ul>
